May 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- support for Half-Life steam master. Nasty hack, hopefully doesn't break other stuff.
- set anti-cheat flag for VAC (secure != 0)
- increase version to 0.9.14.1
- redial also when only private slots are free and no password is set
  (suggested by John Stotler)
- default_home and main_mods (e.g. baseq3) tags in games.xml
- support custom config in all Q3A based games (suggested by Ruediger Meier)
- fix fs_game for RTCW, offer it for ET (reported by Ruediger Meier)

Mar 30, 2004: Jordi Mallach <jordi@sindominio.net>
- add Russian translation by Dan Korostelev <dan@ats.energo.ru>.

Mar 22, 2004: Jordi Mallach <jordi@sindominio.net>
- fix clean rule in toplevel Makefile.am.

Mar 21, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- released 0.9.14

Mar 20, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- load GeoIP.dat from location specified in environment variable xqf_GEOIPDAT

Mar 16, 2004: Jordi Mallach <jordi@sindominio.net>
- update Catalan and Spanish translations.

Mar 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- redesign about dialog to include logo
- unify summary in .desktop and .spec file
- change version to 0.9.13.2

Feb 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add LAN master for ut2004
- detect whether a server is ut2003 or ut2004
- update ut2004 icon

Feb 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- don't unset game if it's baseq3 to be able to filter for it

Feb 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- also check GamePassword rule which is used by UT2004
- add multiplay.co.uk server listing

Feb 13, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- move suggest_commands into xml file
- add support for UT2004. Someone please tell me a master server for it!

Feb 09, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- introduce GAME_ADMIN which allows to enter an rcon password without actually
  supporting rcon